# oeis

./: .gitignore  LICENSE  oeis.cabal  readme.md
app/: Main.hs
