cabal-version:      2.4
name:               oeis
version:            0.1.0.0
synopsis:
    A command-line program for extracting sequences from the Online Encyclopedia of Integer Sequences.

-- A longer description of the package.
-- description:
homepage:           https://github.com/dixonary/oeis

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Alex Dixon
maintainer:         alex@dixonary.co.uk


-- A copyright notice.
-- copyright:
category:           Math

executable oeis
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      request,
                      aeson,
                      unordered-containers,
                      split,
                      vector,
                      text,
                      optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: BlockArguments, 
                        LambdaCase, 
                        OverloadedStrings, 
                        RecordWildCards